Add default_copy technical spec

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -19,14 +19,35 @@ Editor: Antony Peacock, ant.peacock@gmail.com
 Add a class template, indirect_value, to the standard library to support indirect objects with value-like semantics.
 
 # Introduction
-The class template, indirect_value, confers value-like semantics on a freestore allocated object. A indirect_value may hold an object of a class T, copying the indirect_value will copy the object of T, and propagation of constness will propagate from the owning classes to the indirect_value type.
+The class template, indirect_value, confers value-like semantics on a freestore allocated object. A indirect_value may hold an object of a class T, copying the indirect_value will copy the object of T, and constness will propagate from the owning classes to the indirect_value type.
 
 ## Motivation
+In C++, when anything in a class definition changes
+The Pimpl idiom has become a well known engineering paradigm in the C++ world
 
 ## Completeness
 Recommended practice for implementation of a Pimpl classes since C++11 has been to store the Pimpl in a std::unique_ptr [H.Sutter] and [S.Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly this is the case for indirect_value.
 
 # Technical specifications
+
+X.X Class template default_copy [default.copy]
+```
+namespace std {
+    template <class T>
+    struct default_copy {
+        T* operator()(const T& t) const;
+    };
+} // namespace std
+```
+The class template default_copy serves as the default copier for the class
+template polymorphic_value.
+The template parameter <code>T</code> of <code>default_copy</code> may be an incomplete type.
+
+<code>T* operator()(const T& t) const<code>;
+* Returns: new T(t)
+
+# Acknowledgements
+The authors would like to thank Thomas Russell, and <more to come> for useful discussion.
 
 # References
 
