Add indirect_value general & synopsis technical spec

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -30,7 +30,7 @@ Recommended practice for implementation of a Pimpl classes since C++11 has been 
 
 # Technical specifications
 
-X.X Class template default_copy [default.copy]
+## X.X Class template default_copy [default.copy]
 ```
 namespace std {
     template <class T>
@@ -43,8 +43,72 @@ The class template default_copy serves as the default copier for the class
 template polymorphic_value.
 The template parameter <code>T</code> of <code>default_copy</code> may be an incomplete type.
 
-<code>T* operator()(const T& t) const<code>;
-* Returns: new T(t)
+<code>T* operator()(const T& t) const;</code>
+* Returns: <code>new T(t);</code>
+
+## X.Y Class template indirect_value [indirect_value]
+### X.Y.1 Class template indirect_value general [indirect_value.general]
+An indirect_value is an object that owns another object and manages that other object through a pointer. More precisely, an indirect value is an object **v** that stores a pointer to a second object **p** and will dispose of **p** when **v** is itself destroyed (e.g., when leaving block scope (9.7)). In this context, **v** is said to own **p**.
+
+An indirect_value object is empty if it does not own a pointer.
+
+Copying a non-empty indirect_value will copy the owned object so that the copied indirect_value will have its own unique copy of the owned object.
+
+Copying from an empty indirect_value produces another empty indirect_value.
+
+Copying and disposal of the owned object can be customised by supplying a copier and deleter.
+
+The template parameter T of indirect_value must be a non-union class type.
+
+The template parameter T of indirect_value may be an incomplete type.
+
+*[Note: Implementations are encouraged to avoid the use of dynamic memory for ownership of small objects.]*
+
+### X.Y.2 Class template indirect_value synopsis [indirect_value.synopsis]
+
+```
+    template <class T, class C = std::default_copy<T>, class D = std::default_delete<T>>
+    class indirect_value {
+    public:
+        using element_type = T;
+        // Constructors
+        constexpr indirect_value() noexcept;
+        explicit indirect_value(T* p, C c=C{}, D d=D{});
+
+        indirect_value(const indirect_value& p);
+        indirect_value(indirect_value&& p) noexcept;
+        indirect_value(T&& t);
+
+        // Destructor
+        ~indirect_value();
+
+        // Assignment
+        indirect_value& operator=(const indirect_value& p);
+        indirect_value& operator=(indirect_value&& p) noexcept;
+
+        // Modifiers
+        void swap(indirect_value<T>& p) noexcept;
+
+        // Observers
+        T& operator*();
+        T* operator->();
+        const T& operator*() const;
+        const T* operator->() const;
+        explicit operator bool() const noexcept;
+    };
+
+    // indirect_value creation
+    template <class T, class ...Ts> indirect_value<T>
+    make_indirect_value(Ts&& ...ts);
+
+    // indirect_value specialized algorithms
+    template<class T>
+    void swap(indirect_value<T>& p, indirect_value<T>& u) noexcept;
+
+} // end namespace std
+
+```
+
 
 # Acknowledgements
 The authors would like to thank Thomas Russell, and <more to come> for useful discussion.
