Add indirect_value constructor technical spec

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -1,7 +1,7 @@
 <pre class='metadata'>
 Title:  <code>indirect_value</code>: An indirect value-type for C++
 Shortname: P1950
-URL: wg21.link/P1950r9
+URL: wg21.link/P1950r0
 Revision: 0
 Audience: LWG
 Status: D
@@ -109,6 +109,27 @@ The template parameter T of indirect_value may be an incomplete type.
 
 ```
 
+### X.Z.3 Class template indirect_value constructors [indirect_value.ctor]
+
+<code>constexpr indirect_value() noexcept;</code>
+* Effects: Constructs an empty indirect_value.
+* Postconditions: bool(*this) == false
+
+<code>explicit indirect_value(T* p, C c=C{}, D d=D{});</code>
+* Effects: Creates a indirect_value object that owns the pointer p. If p is non-null then the copier and deleter of the indirect_value constructed is moved from c and d.
+* Requires: C and D satisfy the requirements of CopyConstructible. If p is non-null then the expression c(*p) returns an object of type T*. The expression d(p) is well formed, has well defined behavior, and does not throw exceptions. 
+* Postconditions: bool(*this) == bool(p).
+* Remarks: A custom copier and deleter are said to be ‘present’ in a polymorphic_value initialised with this constructor.
+
+<code>indirect_value(const indirect_value& p);</code>
+* Effects: Creates a polymorphic_value object that owns a copy of the object managed by p. The copy is created by the copier in p. If p has a custom copier and deleter then the custom copier and deleter of the indirect_value constructed are copied from those in p.
+* Throws: Any exception thrown by the copier or bad_alloc if required storage cannot be obtained.
+* Postconditions: bool(*this) == bool(p).
+
+<code>indirect_value(indirect_value&& p) noexcept;</code>
+* Remarks: The second constructor shall not participate in overload resolution unless U* is convertible to T*.
+* Effects: Move-constructs a indirect_value instance from p. If p has a custom copier and deleter then the copier and deleter of the indirect_value constructed are the same as those in p.
+* Postconditions: *this contains the old value of p. p is empty.
 
 # Acknowledgements
 The authors would like to thank Thomas Russell, and <more to come> for useful discussion.
