Add indirect_value destructor technical spec

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -131,6 +131,10 @@ The template parameter T of indirect_value may be an incomplete type.
 * Effects: Move-constructs a indirect_value instance from p. If p has a custom copier and deleter then the copier and deleter of the indirect_value constructed are the same as those in p.
 * Postconditions: *this contains the old value of p. p is empty.
 
+### X.Z.4 Class template indirect_value destructor [indirect_value.dtor]
+<code>~indirect_value();</code>
+* Effects: If get() == nullptr there are no effects. If a custom deleter d is present then d(p) is called and the copier and deleter are destroyed. Otherwise the destructor of the managed object is called.
+
 # Acknowledgements
 The authors would like to thank Thomas Russell, and <more to come> for useful discussion.
 
