--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -77,7 +77,6 @@ The template parameter T of indirect_value may be an incomplete type.
 
         indirect_value(const indirect_value& p);
         indirect_value(indirect_value&& p) noexcept;
-        indirect_value(T&& t);
 
         // Destructor
         ~indirect_value();
@@ -109,7 +108,7 @@ The template parameter T of indirect_value may be an incomplete type.
 
 ```
 
-### X.Z.3 Class template indirect_value constructors [indirect_value.ctor]
+### X.Y.3 Class template indirect_value constructors [indirect_value.ctor]
 
 <code>constexpr indirect_value() noexcept;</code>
 * Effects: Constructs an empty indirect_value.
@@ -131,9 +130,25 @@ The template parameter T of indirect_value may be an incomplete type.
 * Effects: Move-constructs a indirect_value instance from p. If p has a custom copier and deleter then the copier and deleter of the indirect_value constructed are the same as those in p.
 * Postconditions: *this contains the old value of p. p is empty.
 
-### X.Z.4 Class template indirect_value destructor [indirect_value.dtor]
+### X.Y.4 Class template indirect_value destructor [indirect_value.dtor]
 <code>~indirect_value();</code>
 * Effects: If get() == nullptr there are no effects. If a custom deleter d is present then d(p) is called and the copier and deleter are destroyed. Otherwise the destructor of the managed object is called.
+
+### X.Y.5 Class template polymorphic_value assignment [polymorphic_value.assignment]
+<code>indirect_value& operator=(const indirect_value& p);</code>
+* Effects: *this owns a copy of the resource managed by p. If p has a custom copier and deleter then the copy is created by the copier in p, and the copier and deleter of *this are copied from those in p. Otherwise the resource managed by *this is initialised by the copy constructor of the resource managed by p.
+* Throws: Any exception thrown by the copier or bad_alloc if required storage cannot be obtained.
+* Returns: *this.
+* Postconditions: bool(*this) == bool(p).
+
+<code>indirect_value& operator=(indirect_value&& p) noexcept;</code>
+* Effects: Ownership of the resource managed by p is transferred to this. If p has a custom copier and deleter then the copier and deleter of *this is the same as those in p.
+* Returns: *this.
+* Postconditions: *this contains the old value of p. p is empty.
+
+### X.Y.6 Class template indirect_value modifiers [indirect_value.modifiers]
+<code>void swap(indirect_value<T>& p) noexcept;</code>
+* Effects: Exchanges the contents of p and *this.
 
 # Acknowledgements
 The authors would like to thank Thomas Russell, and <more to come> for useful discussion.
