--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -150,6 +150,20 @@ The template parameter T of indirect_value may be an incomplete type.
 <code>void swap(indirect_value<T>& p) noexcept;</code>
 * Effects: Exchanges the contents of p and *this.
 
+### X.Y.7 Class template polymorphic_value observers [polymorphic_value.observers]
+<code>const T& operator*() const noexcept;</code>
+<code>T& operator*() noexcept;</code>
+* Requires: bool(*this).
+* Returns: A reference to the owned object.
+
+<code>const T* operator->() const;</code>
+<code>T* operator->();</code>
+* Requires: bool(*this).
+* Returns: A pointer to the owned object. 
+
+<code>explicit operator bool() const noexcept;</code>
+* Returns: false if the polymorphic_value is empty, otherwise true.
+
 # Acknowledgements
 The authors would like to thank Thomas Russell, and <more to come> for useful discussion.
 
