Format indirect_value observers technical spec

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -151,13 +151,17 @@ The template parameter T of indirect_value may be an incomplete type.
 * Effects: Exchanges the contents of p and *this.
 
 ### X.Y.7 Class template polymorphic_value observers [polymorphic_value.observers]
-<code>const T& operator*() const noexcept;</code>
-<code>T& operator*() noexcept;</code>
+```
+T& operator*() noexcept;
+const T& operator*() const noexcept;
+```
 * Requires: bool(*this).
 * Returns: A reference to the owned object.
 
-<code>const T* operator->() const;</code>
-<code>T* operator->();</code>
+```
+T* operator->() noexcept;
+const T* operator->() const noexcept;
+```
 * Requires: bool(*this).
 * Returns: A pointer to the owned object. 
 
