Remarks on incomplete types

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -111,6 +111,7 @@ The template parameter T of indirect_value may be an incomplete type.
 ### X.Y.3 Class template indirect_value constructors [indirect_value.ctor]
 
 <code>constexpr indirect_value() noexcept;</code>
+* Remarks: The method shall work with incomplete pointer type for T.
 * Effects: Constructs an empty indirect_value.
 * Postconditions: bool(*this) == false
 
@@ -126,9 +127,9 @@ The template parameter T of indirect_value may be an incomplete type.
 * Postconditions: bool(*this) == bool(p).
 
 <code>indirect_value(indirect_value&& p) noexcept;</code>
-* Remarks: The second constructor shall not participate in overload resolution unless U* is convertible to T*.
 * Effects: Move-constructs a indirect_value instance from p. If p has a custom copier and deleter then the copier and deleter of the indirect_value constructed are the same as those in p.
 * Postconditions: *this contains the old value of p. p is empty.
+* Remarks: The method shall work with incomplete pointer type for T.
 
 ### X.Y.4 Class template indirect_value destructor [indirect_value.dtor]
 <code>~indirect_value();</code>
@@ -145,10 +146,12 @@ The template parameter T of indirect_value may be an incomplete type.
 * Effects: Ownership of the resource managed by p is transferred to this. If p has a custom copier and deleter then the copier and deleter of *this is the same as those in p.
 * Returns: *this.
 * Postconditions: *this contains the old value of p. p is empty.
+* Remarks: The method shall work with incomplete pointer type for T.
 
 ### X.Y.6 Class template indirect_value modifiers [indirect_value.modifiers]
 <code>void swap(indirect_value<T>& p) noexcept;</code>
 * Effects: Exchanges the contents of p and *this.
+* Remarks: The method shall work with incomplete pointer type for T.
 
 ### X.Y.7 Class template polymorphic_value observers [polymorphic_value.observers]
 ```
@@ -164,9 +167,11 @@ const T* operator->() const noexcept;
 ```
 * Requires: bool(*this).
 * Returns: A pointer to the owned object. 
+* Remarks: The method shall work with incomplete pointer type for T.
 
 <code>explicit operator bool() const noexcept;</code>
 * Returns: false if the polymorphic_value is empty, otherwise true.
+* Remarks: The method shall work with incomplete pointer type for T.
 
 # Acknowledgements
 The authors would like to thank Thomas Russell, and <more to come> for useful discussion.
