Minor correction to paper and ref impl

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -22,11 +22,17 @@ Add a class template, indirect_value, to the standard library to support indirec
 The class template, indirect_value, confers value-like semantics on a freestore allocated object. A indirect_value may hold an object of a class T, copying the indirect_value will copy the object of T, and constness will propagate from the owning classes to the indirect_value type.
 
 ## Motivation
+* Deep Copying
+* Pimpl
+
 In C++, when anything in a class definition changes
 The Pimpl idiom has become a well known engineering paradigm in the C++ world
 
 ## Completeness
 Recommended practice for implementation of a Pimpl classes since C++11 has been to store the Pimpl in a std::unique_ptr [H.Sutter] and [S.Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly this is the case for indirect_value.
+
+## Impact on the standard
+This proposal is a pure library extension. It requires additions to be made to the standard library header <memory>.
 
 # Technical specifications
 
@@ -90,9 +96,9 @@ The template parameter T of indirect_value may be an incomplete type.
 
         // Observers
         T& operator*();
-        T* operator->();
+        T* operator->() noexcept;
         const T& operator*() const;
-        const T* operator->() const;
+        const T* operator->() const noexcept;
         explicit operator bool() const noexcept;
     };
 
@@ -135,7 +141,7 @@ The template parameter T of indirect_value may be an incomplete type.
 <code>~indirect_value();</code>
 * Effects: If get() == nullptr there are no effects. If a custom deleter d is present then d(p) is called and the copier and deleter are destroyed. Otherwise the destructor of the managed object is called.
 
-### X.Y.5 Class template polymorphic_value assignment [polymorphic_value.assignment]
+### X.Y.5 Class template indirect_value assignment [indirect_value.assignment]
 <code>indirect_value& operator=(const indirect_value& p);</code>
 * Effects: *this owns a copy of the resource managed by p. If p has a custom copier and deleter then the copy is created by the copier in p, and the copier and deleter of *this are copied from those in p. Otherwise the resource managed by *this is initialised by the copy constructor of the resource managed by p.
 * Throws: Any exception thrown by the copier or bad_alloc if required storage cannot be obtained.
@@ -153,10 +159,10 @@ The template parameter T of indirect_value may be an incomplete type.
 * Effects: Exchanges the contents of p and *this.
 * Remarks: The method shall work with incomplete pointer type for T.
 
-### X.Y.7 Class template polymorphic_value observers [polymorphic_value.observers]
+### X.Y.7 Class template indirect_value observers [indirect_value.observers]
 ```
-T& operator*() noexcept;
-const T& operator*() const noexcept;
+T& operator*();
+const T& operator*() const;
 ```
 * Requires: bool(*this).
 * Returns: A reference to the owned object.
@@ -181,5 +187,7 @@ The authors would like to thank Thomas Russell, and <more to come> for useful di
 [H.Hinnant] [“Incomplete types and shared_ptr / unique_ptr”, Howard Hinnant, 2011, ](http://howardhinnant.github.io/incomplete.html)
 
 [H.Sutter] ["GotW #100: Compilation Firewalls", Herb Sutter, 2011, ](https://herbsutter.com/gotw/_100/)
+
+[Impl] [Reference implementation: indirect_value, J.B.Coe](https://github.com/jbcoe/indirect_value)
 
 [S. Meyers] Effective Modern C++, Item 22: When using the Pimpl Idiom, define special member functions in the implementation file, Scott Meyers, 2014
