--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -17,19 +17,27 @@ Editor: Antony Peacock, ant.peacock@gmail.com
 
 # Abstract
 Add a class template, indirect_value, to the standard library to support indirect objects with value-like semantics.
-
 # Introduction
-The class template, indirect_value, confers value-like semantics on a freestore allocated object. A indirect_value may hold an object of a class T, copying the indirect_value will copy the object of T, and constness will propagate from the owning classes to the indirect_value type.
+The class template, indirect_value, confers value-like semantics on a freestore allocated object. An indirect_value may hold an object of a class T, copying the indirect_value will copy the object of T, and constness will propagate from the owning classes to the indirect_value type.
 
 ## Motivation
-* Deep Copying
-* Pimpl
 
+The C++ standard includes support for numerous smart pointer templates, with support for new addition ongoing [Meneide et al].  One common use for these types is as the pointer-to-implementation in the Pimpl idiom [H.Sutter]. When the application design requires deep-copy semantic when the type is moved, existing pointer types, <code>std::unique_ptr</code> and <code>std::shared_ptr</code> are not the correct tool for the job.  
+
+One option for value semantics is the use of <code>std::experimental::polymophic_value</code>. However, <code>polymophic_value</code> provides a solution to the *polymorphic copying problem*, which requires the use of type-erasure.  Such implementation details incur a cost. However, use of the Pimpl idiom will likely not involve polymorphic types.  As such using <code>polymophic_value</code> means paying for features that are not used.  
+
+In this case, what is needed is value semantics for an indirectly owned value.  This paper proposes the <code>indirect_value</code> template for future standardisation. The issues to be addressed will be examined in further detail, prior art on the subject will be discussed and finally, open questions posed.
+
+## Deep Copying
+## Pimpl
 In C++, when anything in a class definition changes
-The Pimpl idiom has become a well known engineering paradigm in the C++ world
+The Pimpl idiom has become a well-known engineering paradigm in the C++ world
 
-## Completeness
-Recommended practice for implementation of a Pimpl classes since C++11 has been to store the Pimpl in a std::unique_ptr [H.Sutter] and [S.Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly this is the case for indirect_value.
+## Why polymophic_value does not solve this problem, i.e. not paying for what you don't use.
+
+
+## Completeness of T*
+Recommended practice for pointer-to-implementation of Pimpl classes since C++11 has been to store the pointer-to-implementation in a std::unique_ptr [S. Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly, this is the case for indirect_value, the table outlines the expected behaviour for incomplete types:
 
 ## Impact on the standard
 This proposal is a pure library extension. It requires additions to be made to the standard library header <memory>.
@@ -122,8 +130,8 @@ The template parameter T of indirect_value may be an incomplete type.
 * Postconditions: bool(*this) == false
 
 <code>explicit indirect_value(T* p, C c=C{}, D d=D{});</code>
-* Effects: Creates a indirect_value object that owns the pointer p. If p is non-null then the copier and deleter of the indirect_value constructed is moved from c and d.
-* Requires: C and D satisfy the requirements of CopyConstructible. If p is non-null then the expression c(*p) returns an object of type T*. The expression d(p) is well formed, has well defined behavior, and does not throw exceptions. 
+* Effects: Creates an indirect_value object that owns the pointer p. If p is non-null then the copier and deleter of the indirect_value constructed are moved from c and d.
+* Requires: C and D satisfy the requirements of CopyConstructible. If p is non-null then the expression c(*p) returns an object of type T*. The expression d(p) is well-formed, has well-defined behaviour, and does not throw exceptions. 
 * Postconditions: bool(*this) == bool(p).
 * Remarks: A custom copier and deleter are said to be ‘present’ in a polymorphic_value initialised with this constructor.
 
@@ -133,7 +141,7 @@ The template parameter T of indirect_value may be an incomplete type.
 * Postconditions: bool(*this) == bool(p).
 
 <code>indirect_value(indirect_value&& p) noexcept;</code>
-* Effects: Move-constructs a indirect_value instance from p. If p has a custom copier and deleter then the copier and deleter of the indirect_value constructed are the same as those in p.
+* Effects: Move-constructs an indirect_value instance from p. If p has a custom copier and deleter then the copier and deleter of the indirect_value constructed are the same as those in p.
 * Postconditions: *this contains the old value of p. p is empty.
 * Remarks: The method shall work with incomplete pointer type for T.
 
@@ -184,10 +192,16 @@ The authors would like to thank Thomas Russell, and <more to come> for useful di
 
 # References
 
-[H.Hinnant] [“Incomplete types and shared_ptr / unique_ptr”, Howard Hinnant, 2011, ](http://howardhinnant.github.io/incomplete.html)
+[A. Upadyshev] [PIMPL, Rule of Zero and Scott Meyers, Andrey Upadyshev, 2015](http://oliora.github.io/2015/12/29/pimpl-and-rule-of-zero.html)
 
-[H.Sutter] ["GotW #100: Compilation Firewalls", Herb Sutter, 2011, ](https://herbsutter.com/gotw/_100/)
+[H. Hinnant] [“Incomplete types and shared_ptr / unique_ptr”, Howard Hinnant, 2011](http://howardhinnant.github.io/incomplete.html)
+
+[H. Sutter] ["GotW #100: Compilation Firewalls", Herb Sutter, 2011](https://herbsutter.com/gotw/_100/)
 
 [Impl] [Reference implementation: indirect_value, J.B.Coe](https://github.com/jbcoe/indirect_value)
 
 [S. Meyers] Effective Modern C++, Item 22: When using the Pimpl Idiom, define special member functions in the implementation file, Scott Meyers, 2014
+
+[W. Brown] [A Preliminary Proposal for a Deep-Copying Smart Pointer, Walter E. Brown, 2012](open-std.org/jtc1/sc22/wg21/docs/papers/2012/n3339.pdf)
+
+[Meneide et al] [out_ptr - a scalable output pointer abstraction,JeanHeyd Meneide, Todor Buyukliev, Isabella Muerte, 2019](http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2019/p1132r6.html)
