Add table of completeness expectations

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -22,9 +22,9 @@ The class template, indirect_value, confers value-like semantics on a freestore 
 
 ## Motivation
 
-The C++ standard includes support for numerous smart pointer templates, with support for new addition ongoing [Meneide et al].  One common use for these types is as the pointer-to-implementation in the Pimpl idiom [H.Sutter]. When the application design requires deep-copy semantic when the type is moved, existing pointer types, <code>std::unique_ptr</code> and <code>std::shared_ptr</code> are not the correct tool for the job.  
+The C++ standard includes support for numerous smart pointer templates, with support for new addition ongoing [Meneide et al].  One common use for these types is as the pointer-to-implementation in the Pimpl idiom [H.Sutter]. When the application design requires deep-copy semantic when the type is moved, existing pointer types, <code>std::unique_ptr</code> and <code>std::shared_ptr</code> are not the correct tool for the job.
 
-One option for value semantics is the use of <code>std::experimental::polymophic_value</code>. However, <code>polymophic_value</code> provides a solution to the *polymorphic copying problem*, which requires the use of type-erasure.  Such implementation details incur a cost. However, use of the Pimpl idiom will likely not involve polymorphic types.  As such using <code>polymophic_value</code> means paying for features that are not used.  
+One option for value semantics is the use of <code>std::experimental::polymophic_value</code>. However, <code>polymophic_value</code> provides a solution to the *polymorphic copying problem*, which requires the use of type-erasure.  Such implementation details incur a cost. However, use of the Pimpl idiom will likely not involve polymorphic types.  As such using <code>polymophic_value</code> means paying for features that are not used.
 
 In this case, what is needed is value semantics for an indirectly owned value.  This paper proposes the <code>indirect_value</code> template for future standardisation. The issues to be addressed will be examined in further detail, prior art on the subject will be discussed and finally, open questions posed.
 
@@ -38,6 +38,68 @@ The Pimpl idiom has become a well-known engineering paradigm in the C++ world
 
 ## Completeness of T*
 Recommended practice for pointer-to-implementation of Pimpl classes since C++11 has been to store the pointer-to-implementation in a std::unique_ptr [S. Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly, this is the case for indirect_value, the table outlines the expected behaviour for incomplete types:
+
+<table>
+<thead>
+<tr>
+<th>Method</th>
+<th>Description</th>
+<th>Incomplete/Complete</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>indirect_value()</td>
+<td>Default constructor</td>
+<td>Incomplete</td>
+</tr>
+<tr>
+<td>indirect_value(const indirect_value&)</td>
+<td>Copy-constructor</td>
+<td>Complete</td>
+</tr>
+<tr>
+<td>indirect_value(indirect_value&&)</td>
+<td>Move-constructor</td>
+<td>Incomplete</td>
+</tr>
+<tr>
+<td>~indirect_value()</td>
+<td>Destructor</td>
+<td>Complete</td>
+</tr>
+<tr>
+<td>indirect_value& indirect_value::operator=(const indirect_value&)</td>
+<td>Copy-assignment</td>
+<td>Complete</td>
+</tr>
+<tr>
+<td>indirect_value& indirect_value::operator=(indirect_value&&)</td>
+<td>Move-assignment</td>
+<td>Incomplete </td>
+</tr>
+<tr>
+<td><p>T& operator*()</p><p>const T& operator*() </p></td>
+<td>Indirection-operator</td>
+<td>Incomplete </td>
+</tr>
+<tr>
+<td><p>T* operator->() noexcept</p><p>const T* operator->() const noexcept</p></td>
+<td>Member-of-pointer-operator </td>
+<td>Incomplete </td>
+</tr>
+<tr>
+<td>explicit operator bool() const noexcept</td>
+<td>Bool-operator</td>
+<td>Incomplete</td>
+</tr>
+<tr>
+<td>void swap(indirect_value<T>& p) noexcept</td>
+<td>Swap</td>
+<td>Incomplete</td>
+</tr>
+</tbody>
+</table>
 
 ## Impact on the standard
 This proposal is a pure library extension. It requires additions to be made to the standard library header <memory>.
