Code formatting for table

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -49,52 +49,62 @@ Recommended practice for pointer-to-implementation of Pimpl classes since C++11 
 </thead>
 <tbody>
 <tr>
-<td>indirect_value()</td>
+<td><code>indirect_value()</code></td>
 <td>Default constructor</td>
 <td>Incomplete</td>
 </tr>
 <tr>
-<td>indirect_value(const indirect_value&)</td>
+<td><code>indirect_value(const indirect_value&)</code></td>
 <td>Copy-constructor</td>
 <td>Complete</td>
 </tr>
 <tr>
-<td>indirect_value(indirect_value&&)</td>
+<td><code>indirect_value(indirect_value&&)</code></td>
 <td>Move-constructor</td>
 <td>Incomplete</td>
 </tr>
 <tr>
-<td>~indirect_value()</td>
+<td><code>~indirect_value()</code></td>
 <td>Destructor</td>
 <td>Complete</td>
 </tr>
 <tr>
-<td>indirect_value& indirect_value::operator=(const indirect_value&)</td>
+<td><code>indirect_value& indirect_value::operator=(const indirect_value&)</code></td>
 <td>Copy-assignment</td>
 <td>Complete</td>
 </tr>
 <tr>
-<td>indirect_value& indirect_value::operator=(indirect_value&&)</td>
+<td><code>indirect_value& indirect_value::operator=(indirect_value&&)</code></td>
 <td>Move-assignment</td>
 <td>Incomplete </td>
 </tr>
 <tr>
-<td><p>T& operator*()</p><p>const T& operator*() </p></td>
+<td><code>T& operator*()</code></td>
 <td>Indirection-operator</td>
 <td>Incomplete </td>
 </tr>
 <tr>
-<td><p>T* operator->() noexcept</p><p>const T* operator->() const noexcept</p></td>
+<td><code>const T& operator*() const</code></td>
+<td>Indirection-operator</td>
+<td>Incomplete </td>
+</tr>
+<tr>
+<td><code>T* operator->() noexcept</code></td>
 <td>Member-of-pointer-operator </td>
 <td>Incomplete </td>
 </tr>
 <tr>
-<td>explicit operator bool() const noexcept</td>
+<td><code>const T* operator->() const noexcept</code></td>
+<td>Member-of-pointer-operator </td>
+<td>Incomplete </td>
+</tr>
+<tr>
+<td><code>explicit operator bool() const noexcept</code></td>
 <td>Bool-operator</td>
 <td>Incomplete</td>
 </tr>
 <tr>
-<td>void swap(indirect_value<T>& p) noexcept</td>
+<td><code>void swap(indirect_value<T>& p) noexcept</code></td>
 <td>Swap</td>
 <td>Incomplete</td>
 </tr>
@@ -102,7 +112,7 @@ Recommended practice for pointer-to-implementation of Pimpl classes since C++11 
 </table>
 
 ## Impact on the standard
-This proposal is a pure library extension. It requires additions to be made to the standard library header <memory>.
+This proposal is a pure library extension. It requires additions to be made to the standard library header \<memory\>.
 
 # Technical specifications
 
