--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -33,11 +33,12 @@ In this case, what is needed is value semantics for an indirectly owned value.  
 In C++, when anything in a class definition changes
 The Pimpl idiom has become a well-known engineering paradigm in the C++ world
 
-## Why polymophic_value does not solve this problem, i.e. not paying for what you don't use.
+## Why polymorphic_value does not solve this problem, i.e. not paying for what you don't use.
 
+## Prior Art
 
 ## Completeness of T*
-Recommended practice for pointer-to-implementation of Pimpl classes since C++11 has been to store the pointer-to-implementation in a std::unique_ptr [S. Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly, this is the case for indirect_value, the table outlines the expected behaviour for incomplete types:
+Recommended practice for pointer-to-implementation of Pimpl classes since C++11 has been to store the pointer-to-implementation in a std::unique_ptr [S. Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly, this is the case for indirect_value, the table outlines the expected behaviour for incomplete pointer types:
 
 <table>
 <thead>
