Add Pimpl motivation

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -22,16 +22,110 @@ The class template, indirect_value, confers value-like semantics on a freestore 
 
 ## Motivation
 
-The C++ standard includes support for numerous smart pointer templates, with support for new addition ongoing [Meneide et al].  One common use for these types is as the pointer-to-implementation in the Pimpl idiom [H.Sutter]. When the application design requires deep-copy semantic when the type is moved, existing pointer types, <code>std::unique_ptr</code> and <code>std::shared_ptr</code> are not the correct tool for the job.
+The C++ standard includes support for numerous smart pointer templates, with support for new addition ongoing [Meneide et al].  One common use for these types is as the pointer-to-implementation in the Pimpl idiom [H.Sutter 11]. If the application design requires deep-copy semantic when the type is moved, existing pointer types, <code>std::unique_ptr</code> and <code>std::shared_ptr</code> are not the correct tools for the job.
 
 One option for value semantics is the use of <code>std::experimental::polymophic_value</code>. However, <code>polymophic_value</code> provides a solution to the *polymorphic copying problem*, which requires the use of type-erasure.  Such implementation details incur a cost. However, use of the Pimpl idiom will likely not involve polymorphic types.  As such using <code>polymophic_value</code> means paying for features that are not used.
 
 In this case, what is needed is value semantics for an indirectly owned value.  This paper proposes the <code>indirect_value</code> template for future standardisation. The issues to be addressed will be examined in further detail, prior art on the subject will be discussed and finally, open questions posed.
 
+## Perfect-Pimpl
+In C++, when anything in a class definition changes dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern the Pimpl idiom was specialised [H.Sutter 98].  Almost three decades on since these ideas started circulating implementation of the Pimpl idiom requires thought about implementation details around copying and to support this feature require user intervention. 
+
+```
+// Header file
+class widget {
+public:
+    widget();
+    ~widget();
+private:
+    class impl;
+    unique_ptr<impl> pimpl;
+};
+ 
+// Implementation file
+class widget::impl {
+    // :::
+};
+ 
+widget::widget() : pimpl{ std::make_unique<impl>( /*...*/  } { }
+widget::~widget() = default;
+```
+
+Using std::unique_ptr the exposed class gets compiler generated move semantics, but not copy semantic.  If these are required the user must now manually define a copy-constructor and assignment operator.
+
+```
+// Header file
+class widget {
+public:
+    widget();
+    ~widget();
+
+    widget(const widget&);
+    widget& operator(const widget&);
+private:
+    class impl;
+    unique_ptr<impl> pimpl;
+};
+ 
+// Implementation file
+class widget::impl {
+    // :::
+};
+ 
+widget::widget() : pimpl{ std::make_unique<impl>( /*...*/  } { }
+widget::~widget() = default;
+
+widget(const widget& rhs)
+{
+    if (rhs.pimpl) { 
+      pimpl = std::unique_ptr<impl>(*pimpl);
+    }
+}
+
+widget& operator=(const widget& rhs) {
+
+    if (this != &rhs ) { 
+        pimpl = std::unique_ptr<impl>(*pimpl);
+    }
+    return *this;
+}
+
+```
+However, this is boiler plate code that must be repeated per Pimpl implementation.  Worse still we are not able to benefit from the rule-of-zero to have the compiler generate this method for use.
+
+Using the proposed indirect_value Pimpl classes could be implemented to take advantage of the rule-of-zero to provide compiler generated method implementations.  Note this is implementations only, function declarations are required in the header and in the source file with the <code>default</code> keyword in-order to instruct the compiler to generate the function bodies in the source translation unit where the definition of the implementation class is visible to the compiler. 
+
+```
+// Header file
+class widget {
+public:
+    widget();
+    widget(widget&& rhs) noexcept;
+    widget(const widget& rhs);
+    widget& operator=(widget&& rhs) noexcept;
+    widget& operator=(const widget& rhs);
+    ~widget();
+private:
+    class impl;
+    unique_ptr<impl> pimpl;
+};
+ 
+// Implementation file
+class widget::impl {
+    // :::
+};
+
+// Force instantiation of the rule of zero methods in the translation unit where implementation details are known.
+widget::widget(widget&& rhs) noexcept = default;
+widget::widget(const widget& rhs) = default;
+widget& widget::operator=(widget&& rhs) noexcept = default;
+widget& widget::operator=(const widget& rhs) = default;
+widget::~widget() = default;
+```
+
+Now the external class has compiler generated copy and move constructors, copy and move assignment operators and destructor.  All of these compiler-generated functions will behave correctly.
+
 ## Deep Copying
-## Pimpl
-In C++, when anything in a class definition changes
-The Pimpl idiom has become a well-known engineering paradigm in the C++ world
 
 ## Why polymorphic_value does not solve this problem, i.e. not paying for what you don't use.
 
@@ -264,12 +358,15 @@ const T* operator->() const noexcept;
 The authors would like to thank Thomas Russell, and <more to come> for useful discussion.
 
 # References
+[J. Coplien] Advanced C++ Programming Styles and Idioms (Addison-Wesley), James O. Coplien, 1992
 
 [A. Upadyshev] [PIMPL, Rule of Zero and Scott Meyers, Andrey Upadyshev, 2015](http://oliora.github.io/2015/12/29/pimpl-and-rule-of-zero.html)
 
 [H. Hinnant] [“Incomplete types and shared_ptr / unique_ptr”, Howard Hinnant, 2011](http://howardhinnant.github.io/incomplete.html)
 
-[H. Sutter] ["GotW #100: Compilation Firewalls", Herb Sutter, 2011](https://herbsutter.com/gotw/_100/)
+[H. Sutter 98] ["Pimpls - Beauty Marks You Can Depend On", Herb Sutter, 1998](http://www.gotw.ca/publications/mill04.htm)
+
+[H. Sutter 11] ["GotW #100: Compilation Firewalls", Herb Sutter, 2011](https://herbsutter.com/gotw/_100/)
 
 [Impl] [Reference implementation: indirect_value, J.B.Coe](https://github.com/jbcoe/indirect_value)
 
